# blog2kindle

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SKILL.md  app.py  converter.py  cover.py  docker-compose.yml  fetcher.py  kindle.py  llm.py  pyproject.toml
static/: index.html
